# taskflow-purvi

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 177eb65170ac_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  deps.py  projects.py  tasks.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: __init__.py  seed.py  session.py
backend/app/models/: project.py  task.py  user.py
backend/app/schemas/: project.py  task.py  user.py
backend/tests/: conftest.py  test_auth.py  test_tasks.py
